# 8681551-initiez-vous-au-ml-engineering

./: .dockerignore  .gitignore  Dockerfile.p2_c1_1  Dockerfile.p2_c1_2  README.md  docker-compose.yml  init.sql  init_db.py  models.py  p1_c3.py  p1_c4_mapping.py  p1_c4_orm.py  p2_c2.py  pyproject.toml  requirements.txt  settings.py
.github/: pull_request_template.md
.github/workflows/: build.yml  cd.yml  ci.yml
