[project]
name = "supervisedlearning"
version = "0.1.0"
description = "code du cours sur l'apprentissage supervise"
authors = ["Zakaria BOUAYYAD"]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "scikit-learn>=1.5.1",
    "pandas>=2.2.2",
    "pyarrow",
    "xgboost>=2.1.1",
    "mlflow>=2.15.1",
    "seaborn>=0.13.2",
    "catboost>=1.2.5",
    "tqdm>=4.66.5",
    "polars>=1.32.3",
    "numpy<2",
    "ipykernel",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "ruff>=0.5.7",
    "jupyter>=1.0.0",
]
